    * [UIMA-1687] - correct top-level svn license/notice files
    * [UIMA-1688] - Cas Editor throws NPE when cleaning a document which is opened
    * [UIMA-1690] - After cleaning a document the outline view does not sync
    * [UIMA-1692] - add missing license headers to .project files etc. in uimaj-eclipse-... projects
    * [UIMA-1694] - Error 'scm url cannot be null' on uimaj POM

** Improvement
    * [UIMA-71] - New v2 features missing from tutorial chapters
    * [UIMA-420] - CVD should use encoding list provided by JVM
    * [UIMA-472] - CAS Editor: All annotation inside the editor should have a differnt default colors as its done in the "UIMA Annotation Viewer"
    * [UIMA-483] - JCas method like getSofaDataString that doesn't copy the chars from the StringHeap
    * [UIMA-518] - improve browser utilities to configured the used browser in UIMA
    * [UIMA-554] - Have produceResource for CollectionReaders operate like other Analysis Engines with respect to setup of type system
    * [UIMA-684] - update website with "How to do a release" 
    * [UIMA-767] - Use eclipse content types to identify annotators descriptors (.ann) and consumer descriptors (.con)
    * [UIMA-841] - move Eclipse feature maven builds into feature projects
    * [UIMA-857] - Change startup of framework to support versioned Jars and simplified classpath
    * [UIMA-961] - Cleanup - remove unused things
    * [UIMA-984] - Improve way we get required jar file javax.activation:activation:jar:1.0.2 for building from the source
    * [UIMA-1015] - Example using deprecated method
    * [UIMA-1048] - Eliminate compiler warings in CVD
    * [UIMA-1067] - Remove char heap/ref heap in StringHeap of the CAS
    * [UIMA-1068] - Use of the JCas cache should be configurable
    * [UIMA-1119] - The XmiCasDeserializer throws NoSuchElementException if an XCAS is corrupted, but doesn't report the offending element.
    * [UIMA-1148] - CVD should ignore feature structures of unknown types