@@ -446,6 +446,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1694'>UIMA-1694</a>] -         Error 'scm url cannot be null' on uimaj POM
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1708'>UIMA-1708</a>] -         Trailing blank following log property level causing problems with IBM Java 6
+</li>
 </ul>
     
 <h2>        Improvement
@@ -681,7 +683,6 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1389'>UIMA-1389</a>] -         Remove OpenNLP example wrapper
 </li>
 </ul>
-    
-       
+
 </body>
 </html>
